--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 				<li class="header_li">
          <a class="header_link" href="#">Why Qubit?</a></li>
 				<li class="header_li">
-         <a class="header_link href="#">Products</a></li>
+         <a class="header_link" href="#">Products</a></li>
 				<li class="header_li">
-         <a class="header_link href="#">Solutions</a></li>
+         <a class="header_link" href="#">Solutions</a></li>
 				<li class="header_li">
-         <a class="header_link href="#">Customers</a></li>
-			</ul>
+         <a class="header_link" href="#">Customers</a></li>
+      </ul>
 		</nav>
 		<div>
         <button class="button">Book a demo</button>
@@ -43,6 +43,49 @@
     </div>
    </div>    
 	</section>
+  <section class="cont grow">
+    <h2 class="grow_title">Grow 2.5x faster than your competitors.</h2>
+    <div class="grow_flex">
+      <div class="grow_element">
+        <img src="./img/grow1.png" alt="grow1">
+        <div class="grow_item">
+          <h3 class="grow_pretitle">RIVER ISLAND</h3>
+          <p class="grow_text">River Island transforms the customer experience with personalization.</p>
+        </div>
+      </div >
+      <div class="grow_element">
+        <img src="./img/grow2.png" alt="grow2">
+         <div class="grow_item">
+          <h3 class="grow_pretitle">RIVER ISLAND</h3>
+          <p class="grow_text">River Island transforms the customer experience with personalization.</p>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      
+    </div>
+  </section>
+  <section class="cont commerce">
+    <h2 class="commerce_title">Qubit CommerceAI.</h2>
+    <div class="commerce_flex">
+      <div>
+        <img src="./img/Frame.svg" alt="">
+        <h3 class="commerce_pretitle">More insight</h3>
+        <p class="commerce_text">Learn which products drive performance and which don't, through automated insights you can action.</p>
+      </div>
+      <div>
+        <img src="./img/Group.svg" alt="">
+        <h3 class="commerce_pretitle">More insight</h3>
+        <p class="commerce_text">Learn which products drive performance and which don't, through automated insights you can action.</p>
+      </div>
+      <div>
+        <img src="./img/Frame2.svg" alt="">
+        <h3 class="commerce_pretitle">More insight</h3>
+        <p class="commerce_text">Learn which products drive performance and which don't, through automated insights you can action.</p>
+      </div>
+    </div>
+  </section>
 	<footer class="main_footer">
     <div class="cont flex">
       <nav class="foter_nav">
